# NetAlert-3.0

./: .gitignore  AUDIO_SETUP.txt  README.md  install_yoda_audio.sh  kali_tts_setup.txt  nsm_files.py  nsm_network_scanner.py  nsm_network_sniffer.py  nsm_utilities.py  pyproject.toml  requirements.txt  requirements.txt.save  session_and_vscode_install.txt  tts_setup.txt  yoda
attack_modules/: nsm_poison.py
nsm_modules/: nsm_files.py  nsm_main.py  nsm_network_scanner.py  nsm_network_sniffer.py  nsm_server.py  nsm_utilities.py  version.py
web_modules/: README.md  how_to_web.md  index.html  index_1.html  index_3.html  index_4.html  index_5.html  nodes.json  yoda.html
web_modules/css/: yoda.css
web_modules/js/: yoda.js
yoda/: yoda.py  yoda_controller.py
