[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netalert3"
version = "3.0.0"
description = "NetAlert 3.0 - Intrusion Prevention / Alert System"
authors = [{ name = "Jabari Lucien" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.semantic_release]
version_variable = "nsm_modules/version.py:__version__"
branch = "main"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
upload_to_release = true
commit_parser = "semantic_release.history.conventional_commits.parser"
upload_to_pypi = false
